[package]
name = "rf-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
hex = "0.4"
hyper = { version = "1", features = ["full"] }
hyper-tls = "0"
http = "1"
reqwest = { version = "0", features = ["json", "gzip", "brotli", "deflate", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"
httpdate = "1"
rand = "0.9.2"
tokio-cron-scheduler = "0"
openssl = { version = "0.10.73", features = ["vendored"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
debug = false
incremental = true
